# prau

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.gr  build.sh  install.sh  project.prau  readme.md
example/dependency/: main.cpp  project.prau
example/dependency_headeronly/: main.cpp  project.prau
example/dependency_headeronly/dependency/a/: project.prau
example/dependency_nested/: project.prau
example/dependency_nested/dependency/a/: project.prau
example/dependency_nested/dependency/b/: project.prau
example/dependency_nested/dependency/c/: project.prau
example/dependency_nested/dependency/common/: project.prau
example/dependency_nested/source/: main.cpp
example/executable/: project.prau
example/executable/source/: main.cpp
resource/compiler/: template.prau
resource/compiler/cpp/: clang.prau
resource/project/: template.prau
resource/workspace/: template.prau
source/: Builder.cpp  Builder.h  Compiler.cpp  Compiler.h  EntryPoint.cpp  Platform.cpp  Platform.h  Project.cpp  Project.h  ProjectGraph.cpp  ProjectGraph.h  SourceLexer.h  SourceParser.h  SourceToken.h  Starter.cpp  Starter.h  Term.h  Text.cpp  Text.h  _builder.h  _compiler.cpp  _project.cpp  _projectgraph.cpp  _sourcelexer.h  _sourceparser.h  _starter.cpp  _starter.h  _term.h  _text.cpp  builder.cpp  builder.h  common.h  compiler.cpp  compiler.h  generator.cpp  generator.h  main.cpp  platform.cpp  platform.h  project.cpp  (+14 more)
source/compiler/: clangcompiler.cpp  clangcompiler.h  emscriptencompiler.cpp  emscriptencompiler.h  gcccompiler.cpp  gcccompiler.h
(+7 files in other folders)
